Revert "Letter spacing fix."
This reverts commit 9971f46d2662ea0a0fd97e58e3207cc39d13437f.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -154,7 +154,6 @@ span.nav {
   line-height: 120%;
   text-shadow: 1px 1px 2px #666;
   margin-top: 20px;
-  letter-spacing: -5px;
 }
 
 #subheader {
